12 May 2007 coudercd
 * updated pmkfile and scanfile.
 * added missing tag generation for pmk library check.

16 Apr 2007 coudercd
 * removed ending line with only one dot that makes Linux complaining,
   noticed by Magnus Holmgren.
 * added a carriage return that was missing in pmkscan log file message.
 * updated main Makefile template to fix GEN_FILES, noticed by Magnus
   Holmgren.

# PMK 0.10.2 release

15 Apr 2007 coudercd
 * fixed processing of pkg-config library directory to support
   multiples path, noticed by Marco Ghirlanda.

13 Apr 2007 coudercd
 * fixed library source labels generation.
 * fixed object dependencies when an object is used in both a binary
   and a library to avoid duplicates.

10 Apr 2007 coudercd
 * resized ressources in pmkscan for larger projects.
 * added more messages in pmkscan.

05 Apr 2007 coudercd
 * removed obsolete option LIBOBJ.
 * added missing initialisation of lib_type in the scanzone structure.

21 Mar 2007 coudercd
 * fixed errors in manual pages and replaced blank lines by one dot
   lines, notified by Magnus Holmgren.
 * fixed the duplicates in macro GEN_FILES of generated makefiles, also
   notified by Magnus Holmgren.

28 Feb 2007 coudercd
 * fixed the label of shared lib linking flags variable in the log
   message (noticed by barratis from toy'd project).

25 Feb 2007 coudercd
 * fixed a segfaulting bug in code_logger().

15 Feb 2007 coudercd
 * fixed a bug occuring in pmkpc when specifying both --cflags and
   --libs options. The result is now separated but a space.

# PMK 0.10.1 release

24 Dec 2006 coudercd
 * fixed codebuild bug spotted by toyd team on linux.
 * reordered pmkcfg.sh compiler detection.

08 Dec 2006 coudercd
 * fixed install_lib target in makefile generation from pmkscan.
 * removed the compatibility option -c for install for portability.

# PMK 0.10.0 release

18 Nov 2006 coudercd
 * added in pmkscan the code to create binary install directory in
   generated makefile template.